--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js" 
   },
+  
   "type": "module",
   "author": "",
   "license": "ISC",
@@ -16,6 +19,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "mongodb": "^6.5.0",
-    "mongoose": "^8.3.1"
+    "mongoose": "^8.3.1",
+    "nodemon": "^3.1.7"
   }
 }
