--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "@mui/material": "^5.15.15",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recharts": "^2.13.3"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
